@@ -1,1 +1,0 @@
-Fork of NetBSD's wtf.
